# OpenGL

./: CMakeLists.txt  Readme.md
images/: CMakeLists.txt
shader/: CMakeLists.txt  source_shader.h.in  texture_triangle.frag  texture_triangle.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt
src/common/: common_funcs.hpp
src/graphics/: CMakeLists.txt  app.cpp  app.hpp  camera.hpp  graphics.cmake  main.cpp  window.cpp  window.h
src/render/: CMakeLists.txt  render.cmake  render_base.cpp  render_base.hpp  vertex.hpp
src/render/gl/: gl_texture.cpp  gl_texture.hpp  render_gl.cpp  render_gl.hpp
src/render/gl/gl_common/: gl_vertex.hpp  shader.cpp  shader.hpp  shader_util.cpp  shader_util.hpp  util.hpp
src/resource/: CMakeLists.txt  resource.cpp  resource.hpp  resources.cmake  texture.cpp  texture.hpp
